# insight-ai

./: .env.example  .gitignore  .npmignore  CHANGELOG.md  README.md  code_graph.json  my_story.md  package-lock.json  package.json  python  tsconfig.json
ai-service/: pyproject.toml
ai-service/insight/: __init__.py
ai-service/insight/api/: __init__.py  app.py
ai-service/insight/chains/: __init__.py
ai-service/insight/chunking/: __init__.py
ai-service/insight/ingestion/: __init__.py
backend/: .env.example  README.md  package.json
backend/src/: server.js
backend/src/config/: database.js
backend/src/middleware/: auth.js  errorHandler.js
backend/src/models/: Project.js  User.js
backend/src/routes/: auth.routes.js  chat.routes.js  project.routes.js
backend/src/services/: aiService.js
python/: .env.example  .gitignore  README.md  code_graph.json  pyproject.toml  pyrightconfig.json  requirements.txt
python/insight/: identity.py
python/insight/chains/: agent_logic.py  analysis_chains.py  conversational_chain.py  qa_chain.py
python/insight/chunking/: splitter.py
python/insight/cli/: __init__.py  main.py
python/insight/database/: manager.py  models.py
python/insight/ingestion/: loader.py  parser.py
python/insight/utils/: __init__.py  config_manager.py  fs_scanner.py
python/insight/vectorstore/: __init__.py  graph_manager.py  store.py
scripts/: setup.js  test_multiuser.py  test_providers.py
src/: cli.tsx  config.ts  markdown.tsx  python-bridge.ts  theme.ts  types.ts
src/components/: Analyze.tsx  App.tsx  Chat.tsx  CommandPalette.tsx  Header.tsx  MessageBubble.tsx  Setup.tsx  StatusBar.tsx
src/hooks/: useInputHistory.ts  useOllamaStatus.ts  useStreaming.ts
